syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


option go_package = "github.com/justbrownbear/microservices_course_auth/pkg/user_v1;user_v1";


service UserV1 {
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
	rpc CreateUserAsync(CreateUserRequest) returns (google.protobuf.Empty);
	rpc GetUser(GetUserRequest) returns (GetUserResponse);
	rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
	rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}


enum Role {
	UNKNOWN = 0;
	USER = 1;
	ADMIN = 2;
}

message CreateUserRequest {
	string name = 1;
	string email = 2;
	string password = 3;
	string password_confirm = 4;
	Role role = 5;
}

message CreateUserResponse {
	uint64 id = 1;
}

message GetUserRequest {
	uint64 id = 1;
}

message GetUserResponse {
	uint64 id = 1;
	string name = 2;
	string email = 3;
	Role role = 4;
	google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserRequest {
	uint64 id = 1;
	string name = 2;
	string email = 3;
	Role role = 4;
}

message DeleteUserRequest {
	uint64 id = 1;
}
